# iris-chat-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_PLAN.md  ARCHITECTURE_REVIEW.md  BETA_RELEASE.md  CHANGELOG.md  PARITY_MATRIX.md  README.md  RELEASE.md  UI_UX_FLOWS.md  ZAPSTORE_RELEASE_NOTES.md  justfile  release.env.example  zapstore.yaml
android/: gradle.properties  settings.gradle.kts
chat-protocol/: CHANGELOG.md  Cargo.toml
chat-protocol/src/: direct_messages.rs  group_roster_fact.rs  lib.rs  nearby.rs  protocol_engine.rs  storage.rs
chat-protocol/src/protocol_engine/: engine_core.rs  engine_fact_ingest.rs  engine_incoming_retry.rs  engine_invite_owner.rs  engine_persistence.rs  engine_queue_filters.rs  engine_resolution.rs  engine_sender_key_repair.rs  engine_sends.rs  engine_state_helpers.rs  free_functions.rs  invite_owner_tests.rs  roster_helpers.rs  test_helpers.rs  types.rs
core/: CHANGELOG.md  Cargo.toml  README.md  build.rs  uniffi.toml
core/src/: actions.rs  core.rs  core_queue_tests.rs  desktop_nearby.rs  desktop_update.rs  emoji.rs  fips_ble_ffi.rs  image_proxy.rs  lib.rs  link_helpers.rs  local_relay.rs  nearby_wire.rs  perflog.rs  qr.rs  state.rs  test_fixtures.rs  update_announcements.rs  update_policy.rs  updates.rs
core/src/core/: account.rs  account_app_keys.rs  account_pending_link.rs  attachment_upload.rs  attachments.rs  chat_reactions.rs  chat_receipts.rs  chat_settings.rs  chat_typing.rs  chats.rs  config.rs  device_approval.rs  device_sync.rs  device_sync_tcp.rs  device_sync_tests.rs  fips_nearby.rs  groups.rs  identity.rs  invites.rs  lifecycle.rs  message_expiry.rs  mobile_push.rs  model.rs  nostr_identity_adapter.rs  notifications.rs  payloads.rs  persistence.rs  profile.rs  profile_helpers.rs  projection.rs  protocol.rs  protocol_engine.rs  protocol_filters.rs  protocol_readiness.rs  publish_helpers.rs  publishing.rs  publishing_fact_events.rs  publishing_identity.rs  relay.rs  routing.rs  (+4 more)
core/src/core/attachment_upload/: same_host_tests.rs
core/src/core/chats/: direct_queue.rs  helpers.rs
core/src/core/device_sync/: anti_entropy.rs  body.rs  messages.rs  recent_peers.rs  runtime.rs
core/src/core/device_sync_tcp/: control.rs  framing.rs  tests.rs
core/src/core/mobile_push/: invite_owner.rs
core/src/core/nearby/: bitchat.rs  mod.rs
core/src/core/protocol/: backfill.rs  retry_helpers.rs  subscription_helpers.rs
core/src/core/protocol_engine/: engine_core.rs  engine_incoming_retry.rs  engine_queue_filters.rs  engine_resolution.rs  engine_sends.rs  free_functions.rs  types.rs
core/src/core/storage/: connection.rs  legacy_ndr.rs  mod.rs  ndr_storage.rs  schema.rs  store.rs  store_pending_relay.rs  store_preferences.rs  store_user_discovery.rs
core/src/core/tests/: app_keys_device_labels.rs  app_keys_invites_requests.rs  app_keys_roster.rs  device_approval.rs  device_roster_fetch.rs  device_sync.rs  direct_group_sender_key_ack.rs  direct_messages_group_requests.rs  direct_messages_readiness.rs  direct_messages_runtime_regressions.rs  direct_messages_typing.rs  first_contact_receiver.rs  groups_persistence_helpers.rs  groups_persistence_more.rs  groups_sender_key.rs  groups_sender_key_retry.rs  nostr_identity_roster.rs  pending_device_link.rs  private_invite_owner_crash.rs  private_invite_owner_verification.rs  protocol_filters_push.rs  protocol_runtime.rs  protocol_runtime_direct_queue.rs  protocol_runtime_replay.rs  protocol_startup_guards.rs  retry_publish_ordering.rs  upload_lifecycle.rs
core/tests/: cli.rs  cli_interop.rs  perf_budgets.rs  search.rs  test_fixtures.rs
core/uniffi-bindgen/: Cargo.toml
docs/: appcore-protocol-simplification-design.md  cli-parity.md  e2e-prerelease-test-matrix.md  experimental-chat-architecture-analysis.md  github-build-artifacts.md  iris-palette.json  nearby-bitchat-compat-plan.md  protocol-engine-contract.md  protocol-fault-validation.md  protocol-simplification-phase1-results.md  protocol-simplification-phase3-results.md  protocol-simplification-phase4-results.md  protocol-simplification-subtractive-spike.md  release-zapstore.md  runtime-testability-boundary.md  sender-key-revision-repair-repro.md  sqlite plan.md  state-refactoring-implementation-plan.md  state-refactoring.md  stateful-model-based-soak.md  testing-fixtures.md  verification-tiers.md
ios/: Info.plist  IrisChat.entitlements  README.md  project.yml
linux/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
linux/resources/: iris-chat.desktop
linux/scripts/: dev-entrypoint.sh
linux/src/: app_manager.rs  main.rs  secure_storage.rs  window.rs
linux/src/platform/: clipboard.rs  mod.rs  notifications.rs  qr_scan.rs  startup.rs
linux/src/screens/: add_device.rs  awaiting_device_approval.rs  chat.rs  chat_list.rs  create_account.rs  create_invite.rs  device_revoked.rs  device_roster.rs  group_details.rs  join_invite.rs  mod.rs  nearby.rs  new_chat.rs  new_group.rs  restore_account.rs  settings.rs  welcome.rs
linux/src/screens/chat/: chat_links.rs  composer.rs  safety.rs
linux/src/widgets/: clickable.rs  image_cache.rs  mod.rs  qr.rs
macos/: Info.plist  IrisChatMac.entitlements  Release.entitlements  project.yml
protocol-ffi/: Cargo.toml
protocol-ffi/src/: error.rs  lib.rs
scripts/: android-release  android_cold_group_invite.py  android_firebase_chat_notification_e2e.sh  android_offline_restart_recovery.py  android_restore_existing_profile.py  app_parity_same_platform_flow.py  build-output-path  capture_relay_event.py  check-no-accent-text  check-palettes  check-rust-file-sizes  check-rust-panics  check-source-file-sizes  check_verification_tiers.sh  cli-release  cli_production_relay_e2e_docker  direct_chat_live_update_smoke.sh  docker_stage_common.sh  e2e_android_public_prerelease.sh  e2e_ios_app_store_review_block_report.sh  e2e_ios_public_prerelease.sh  e2e_macos_vm_prerelease.sh  e2e_mixed_public_prerelease.sh  e2e_prerelease_common.sh  e2e_prerelease_matrix.sh  e2e_reliability_lab.sh  emulator_smoke.sh  group_admin_same_platform_flow.py  group_chat_matrix_smoke.sh  (+121 more)
(+257 files in other folders)
