[package]
name = "iris-chat-protocol"
version = "0.1.5"
edition = "2021"
description = "Reusable Iris Chat double-ratchet protocol engine"
license = "MIT"
repository = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/iris-chat-rs"
homepage = "https://iris.to"

[dependencies]
anyhow = "1"
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip44"] }
nostr-double-ratchet = "0.0.163"
nostr-double-ratchet-pairwise-codec = "0.0.163"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
