[package]
name = "iris-chat"
version = "0.1.30"
edition = "2021"
description = "Iris Chat command line client and shared encrypted chat core"
license = "MIT"
repository = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/iris-chat-rs"
homepage = "https://iris.to"
readme = "README.md"
keywords = ["iris", "chat", "nostr", "encrypted", "cli"]
categories = ["command-line-utilities"]
autobins = false
default-run = "iris"

[lib]
name = "iris_chat_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "iris"
path = "src/bin/iris.rs"

[[bin]]
name = "local_nostr_relay"
path = "src/bin/local_nostr_relay.rs"
required-features = ["local-relay-bin"]

[features]
local-relay-bin = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
flume = "0.11"
hashtree-blossom = "=0.2.8"
hashtree-config = "=0.2.8"
hashtree-core = "=0.2.8"
hmac = "0.12"
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip44"] }
nostr35 = { package = "nostr", version = "0.35.0", default-features = false, features = ["std", "nip44"] }
nostr-sdk = { version = "0.44.1", default-features = false, features = ["nip44"] }
nostr-double-ratchet = { version = "0.0.147", path = "../../nostr-double-ratchet/rust/crates/nostr-double-ratchet" }
nostr-double-ratchet-nostr = { version = "0.0.147", path = "../../nostr-double-ratchet/rust/crates/nostr-double-ratchet-nostr" }
nostr-double-ratchet-pairwise-codec = { version = "0.0.147", path = "../../nostr-double-ratchet/rust/crates/nostr-double-ratchet-pairwise-codec" }
nostr-double-ratchet-runtime = { version = "0.0.147", path = "../../nostr-double-ratchet/rust/crates/nostr-double-ratchet-runtime", features = ["nearby"] }
qrcode = { version = "0.14", default-features = false }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "fs"] }
tokio-tungstenite = "0.24"
tokio-util = { version = "0.7", features = ["compat"] }
uniffi = "0.29.4"
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
