[package]
name = "iris-chat"
version = "0.1.40"
edition = "2021"
description = "Iris Chat command line client and shared encrypted chat core"
license = "MIT"
repository = "https://git.iris.to/#/npub1399g0q2gtwjcglyjcg3jw3rcllqhm375pwases5hkvqa56aqe5wsz2eaap/iris-chat-rs"
homepage = "https://iris.to"
readme = "README.md"
keywords = ["iris", "chat", "nostr", "encrypted", "cli"]
categories = ["command-line-utilities"]
autobins = false
default-run = "iris"

[lib]
name = "iris_chat_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "iris"
path = "src/bin/iris.rs"

[[bin]]
name = "local_nostr_relay"
path = "src/bin/local_nostr_relay.rs"
required-features = ["local-relay-bin"]

[[bin]]
name = "iris-chat-stack-fixture"
path = "src/bin/iris_chat_stack_fixture.rs"
required-features = ["stack-fixture"]

[features]
local-relay-bin = []
stack-fixture = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
flume = "0.11"
fips-core = { version = "=0.4.6", features = ["webrtc-transport"] }
fips-tcp = "0.2.0"
fips-tcp-endpoint = "0.2.0"
hashtree-blossom = { version = "=0.2.82", default-features = false, features = ["store"] }
hashtree-config = "=0.2.83"
hashtree-core = "=0.2.86"
hashtree-fips-transport = "=0.4.6"
hashtree-network = "=0.2.87"
hashtree-resolver = { version = "=0.2.82", features = ["nostr"] }
hashtree-updater = { version = "=0.2.82", features = ["secure-nostr-blossom"] }
hmac = "0.12"
iris-chat-protocol = { version = "0.1.7", path = "../chat-protocol" }
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip44"] }
nostr-sdk = { version = "0.44.1", default-features = false, features = ["nip44"] }
nostr-pubsub = "=0.1.11"
nostr-pubsub-fips = "=0.3.1"
nostr-identity = "=0.4.0"
nostr-double-ratchet = "0.0.164"
nostr-double-ratchet-pairwise-codec = "0.0.164"
qrcode = { version = "0.14", default-features = false }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["compat"] }
uniffi = "0.29.4"
url = "2"
urlencoding = "2"
uuid = "1"

[dev-dependencies]
tempfile = "3"
