[package]
name = "iris-chat-linux"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "iris-chat"
path = "src/main.rs"

[dependencies]
ndr-demo-core = { path = "../core" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
