[package]
name = "iris-chat-linux"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "iris-chat"
path = "src/main.rs"

[dependencies]
iris-chat-core = { package = "iris-chat", path = "../core" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[package.metadata.deb]
name = "iris-chat"
maintainer = "Iris <hi@iris.to>"
copyright = "Iris"
extended-description = "Iris Chat — encrypted Nostr messenger."
section = "net"
priority = "optional"
assets = [
    ["target/release/iris-chat", "usr/bin/", "755"],
    ["resources/iris-chat-16.png", "usr/share/icons/hicolor/16x16/apps/iris-chat.png", "644"],
    ["resources/iris-chat-22.png", "usr/share/icons/hicolor/22x22/apps/iris-chat.png", "644"],
    ["resources/iris-chat-24.png", "usr/share/icons/hicolor/24x24/apps/iris-chat.png", "644"],
    ["resources/iris-chat-32.png", "usr/share/icons/hicolor/32x32/apps/iris-chat.png", "644"],
    ["resources/iris-chat-48.png", "usr/share/icons/hicolor/48x48/apps/iris-chat.png", "644"],
    ["resources/iris-chat-64.png", "usr/share/icons/hicolor/64x64/apps/iris-chat.png", "644"],
    ["resources/iris-chat-128.png", "usr/share/icons/hicolor/128x128/apps/iris-chat.png", "644"],
    ["resources/iris-chat-256.png", "usr/share/icons/hicolor/256x256/apps/iris-chat.png", "644"],
    ["resources/iris-chat-512.png", "usr/share/icons/hicolor/512x512/apps/iris-chat.png", "644"],
    ["resources/iris-chat.desktop", "usr/share/applications/iris-chat.desktop", "644"],
]
